# wanvidgen

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_fix_logging_collision.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  VALIDATION.md  acceptance_test.py  example.py  pyproject.toml  requirements.txt  setup.py  test_components.py  test_custom_log_dir.py  test_kv_format.py  test_log_levels.py  test_logging_output.py  test_no_collision.py
examples/: basic_generation.py
outputs/: generation.json
src/wanvidgen/: __init__.py  __main__.py  config.py  exceptions.py  gui.py  log_config.py  logging.py  main.py  memory.py  models.py  outputs.py  pipeline.py  utils.py
src/wanvidgen/models/: __init__.py  base_manager.py  clip_manager.py  main_model_manager.py  unet_manager.py  vae_manager.py
src/wanvidgen/output/: __init__.py  handlers.py
src/wanvidgen/utils/: __init__.py  core.py  memory.py
tests/: __init__.py  acceptance_test.py  smoke_test.py  test_components.py  test_custom_log_dir.py  test_exceptions.py  test_memory.py  test_models.py  test_pipeline.py  verify_fix.py
wanvidgen/: __init__.py  __main__.py  main.py
wanvidgen/config/: __init__.py  config.py
wanvidgen/gui/: __init__.py  app.py
wanvidgen/pipeline/: __init__.py  pipeline.py
