[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wanvidgen"
version = "0.0.0"
description = "Video generation utilities with structured logging and output handlers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
video = [
    "moviepy>=1.0.3",
]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
