[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "wanvidgen"
version = "0.1.0"
description = "Wan2.1 GGUF application for video generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "WanVidGen Team", email = "team@wanvidgen.dev"}
]
maintainers = [
    {name = "WanVidGen Team", email = "team@wanvidgen.dev"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "customtkinter>=5.2.0",
    "python-dotenv>=1.0.0",
    "moviepy>=1.0.3",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.8",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pre-commit>=3.0.0",
]
gui = [
    "tk>=0.1.0",
    "pillow>=10.0.0",
]

[project.scripts]
wanvidgen = "wanvidgen.main:main"

[project.urls]
Homepage = "https://github.com/wanvidgen/wanvidgen"
Documentation = "https://github.com/wanvidgen/wanvidgen#readme"
Repository = "https://github.com/wanvidgen/wanvidgen"
"Bug Tracker" = "https://github.com/wanvidgen/wanvidgen/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"